# sports-analysis-app

./: .env.example  .gitignore  BRAINSTORM_STATE.md  README.md  ROADMAP.md  pyproject.toml
agents/: FRAMEWORK.md  run_all.py
agents/baseball-agents/: .env.example  .gitignore  briefing.py  calibrate.py  config.py  edge.py  main.py  requirements.txt  simulate.py  tracker.py
agents/cricket-agents/: .env.example  adjustments.py  briefing.py  config.py  edge.py  main.py  requirements.txt  simulate.py  tracker.py
agents/esports-agents/: briefing.py  config.py  edge.py  main.py  requirements.txt  simulate.py
agents/nba-agents/: .env.example  .gitignore  briefing.py  config.py  derive.py  edge.py  main.py  pipeline_utils.py  requirements.txt  simulate.py  tracker.py
agents/ncaab-agents/: .env.example  briefing.py  config.py  edge.py  main.py  simulate.py  tracker.py
agents/soccer-agents/: briefing.py  calibrate.py  config.py  edge.py  main.py  simulate.py  tracker.py
agents/tennis-agents/: .env.example  .gitignore  INVESTIGATE_LATER.md  briefing.py  calibrate.py  config.py  edge.py  main.py  requirements.txt  sim_cache.py  simulate.py  tracker.py
agents/ufc-agents/: .gitignore  01-ufc-mma.md  briefing.py  config.py  edge.py  main.py  requirements.txt  simulate.py  tracker.py
agents/universal/: README.md  __init__.py  priority.py
scripts/: download_logos.py
server/: cache_snapshot.db  config.py  main.py  models.py  sports.py  user_settings.py  util.py
server/api/: arbitrage.py  bets.py  (+20 more)
web/: next.config.ts  openapi.json  package-lock.json  package.json
(+826 files in other folders)
