[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betting-site-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "vcrpy>=6.0",
  "pytest-vcr>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
asyncio_mode = "auto"
